Fixed side by side images being squashed

--- a/src/components/sideBySide.module.css
+++ b/src/components/sideBySide.module.css
@@ -13,8 +13,6 @@
 }
 
 .sideBySide img {
-  width: 100%;
-  height: 225px;
   padding: 1rem;
   object-fit: cover;
   border-radius: 20px;
